加入會員登入功能

--- a/Circle/Info.plist
+++ b/Circle/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>MBXAccessToken</key>
+	<string>pk.eyJ1IjoiYmFuZWxpbjMwIiwiYSI6ImNsbzcyb3B3ajAxaHYya28wam5mMjd4aWMifQ.Z9jUb5TG7qfJFt7puWqInQ</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
